--- a/Config/DefaultGame.ini
+++ b/Config/DefaultGame.ini
@@ -12,4 +12,7 @@ bShouldManagerDetermineTypeAndName=False
 bShouldGuessTypeAndNameInEditor=True
 bShouldAcquireMissingChunksOnLoad=False
 
+[/Script/UnrealEd.ProjectPackagingSettings]
+BuildConfiguration=PPBC_Shipping
+StagingDirectory=(Path="../../../../Battle_Mage/BuiltTest")
 
